examples/test/testpolicy2441.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2441
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key32: value1
      key23: value7
      key4: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value26
          key7: value16
          key46: value18
      podSelector:
        matchLabels:
          key4: value7
          key48: value47
